proparse/src/test/resources/data/errors/test02.cls
class test02:

 method public void m1():
  message "Test".
 end method.

 method public void m1():
  quit.
 end method.

end class.
